samples/_failures_safe/1761689898_d982ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2e8bf19.c: In function ‘main’:
./samples/SAFE/__tmp_c2e8bf19.c:159:5: error: expected expression at end of input
  159 |     if (logs.count >
      |     ^~
./samples/SAFE/__tmp_c2e8bf19.c:159:5: error: expected declaration or statement at end of input
